--- a/scraping_wikipedia_suburbs.ipynb
+++ b/scraping_wikipedia_suburbs.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GOOGLE_MAPS_API = 'AIzaSyBxqCRTDqaRrDHDh_LBPO2QFOWqGDFeY0w'"
+    "GOOGLE_MAPS_API = ''"
    ]
   },
   {
