Add aBS Selenium web-interactive function

--- a/scraping_wikipedia_suburbs.ipynb
+++ b/scraping_wikipedia_suburbs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,6 +1173,144 @@
    "outputs": [],
    "source": [
     "missing_data['density'] = round(missing_data['Population'] / missing_data['area'], 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Get demographic data from Australian Bureau of Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import selenium\n",
+    "from selenium import webdriver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using Chrome to access web\n",
+    "driver = webdriver.Chrome()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Open the website\n",
+    "driver.get('https://www.abs.gov.au/websitedbs/D3310114.nsf/Home/2016%20QuickStats')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Select the id box\n",
+    "id_box = driver.find_element_by_class_name('gwt-SearchWidget-SuggestBox-Fade')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Send id information\n",
+    "id_box.send_keys('Kensington')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get pop-up table\n",
+    "popup_table_id = driver.find_element_by_class_name('suggestPopupMiddleCenterInner')\n",
+    "\n",
+    "# Get suburb index from popup table\n",
+    "rows = popup_table_id.find_elements_by_tag_name(\"tr\")\n",
+    "        \n",
+    "counter = -1\n",
+    "\n",
+    "for row in rows:\n",
+    "    counter = counter + 1\n",
+    "    popup_text = row.text\n",
+    "    if 'State Suburb (SSC)' in popup_text:\n",
+    "        if 'Vic' in popup_text:\n",
+    "#             print(counter, popup_text)\n",
+    "            break\n",
+    "\n",
+    "# List Suburb gwt-uids from popup table \n",
+    "# IDs = popup_table_id.find_elements_by_tag_name('td')\n",
+    "# for ID in IDs:\n",
+    "#     print(ID.get_attribute('id'))\n",
+    "\n",
+    "# Get Suburb gwt-uid from popup table \n",
+    "IDs = popup_table_id.find_elements_by_tag_name('td')\n",
+    "suburb_uid = IDs[counter].get_attribute('id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find suburb by id\n",
+    "popup_item = driver.find_element_by_id(suburb_uid)\n",
+    "\n",
+    "# Select suburb\n",
+    "popup_item.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find GO button\n",
+    "go_button = driver.find_element_by_class_name('gwt-SearchWidget-Button')\n",
+    "\n",
+    "# Click GO\n",
+    "go_button.click()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scrape ABS data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Scrape data\n",
+    "* Male %\n",
+    "* Female %\n",
+    "* Median age\n",
+    "* Families\n",
+    "* Average people per household\n",
+    "* Median weekly household income\n",
+    "* Median monthly mortgage repayments\n",
+    "* Median weekly rent\n",
+    "* Average motor vehicles per dwelling\n"
    ]
   },
   {
